--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                   <button type="submit">Search</button>
 		</fieldset>
 	</form>
-
+      <ul class="navigation">
+            <li><a href="https://brianhernandez.github.io/introduction-to-css__multi-page-web-site/forms.html">Form Projects Homepage</a></li>
+            <li><a href="https://brianhernandez.github.io/introduction-to-css__multi-page-web-site/">Projects Homepage</a></li>
+      </ul>
 </body>
 </html>
